@@ -17,7 +17,7 @@ function doit()
         output("=== After clear ==="); 
         dumpConsoleMessages();
     }
-    evaluateInWebInspector("InspectorBackend.evaluate('clear()', '', function() {})", callback);
+    evaluateInWebInspector("InspectorBackend.evaluate('clear()', '', true, function() {})", callback);
 }
 
 </script>
